[project]
name = "podcast-converter"
version = "0.1.0"
description = "Utilities for converting and generating visualizers for podcast audio"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.13.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.14.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
]
